# kwin-effects-startupfeedback-busy-cursor

./: CMakeLists.txt  README.md  flake.nix  package.nix
src/: CMakeLists.txt  metadata.json  startupfeedback.cpp  startupfeedback.h  startupfeedback.kcfg  startupfeedbackconfig.kcfgc
src/kcm/: CMakeLists.txt  startupfeedback_config.cpp  startupfeedback_config.h  startupfeedback_config.ui
